# omniteleop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  restart.sh  run.sh  stop.sh
dynamixelAPI/: pyproject.toml  setup.py
dynamixelAPI/src/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_read.py  group_sync_write.py  packet_handler.py  port_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py  robotis_def.py
dynamixelAPI/tests/: protocol_combined.py
dynamixelAPI/tests/protocol1_0/: bulk_read.py  factory_reset.py  multi_port.py  ping.py  read_write.py  sync_write.py
dynamixelAPI/tests/protocol2_0/: broadcast_ping.py  bulk_read_write.py  clear_multi_turn.py  factory_reset.py  fast_bulk_read.py  fast_sync_read.py  indirect_address.py  multi_port.py  ping.py  read_write.py  reboot.py  sync_read_write.py
output/ssh/cert/: id_ed25519  id_ed25519-cert.pub
src/omniteleop/: __init__.py
src/omniteleop/app/: launch.sh
src/omniteleop/app/backend/: app_backend.py  mcap_viz.py  state_checker.py
src/omniteleop/app/backend/backend_utils/: __init__.py  state_manager.py  state_publisher.py  video_publisher.py
src/omniteleop/app/backend/mcap_utils/: __init__.py  episode.py  mcap_reader.py  mcap_writer.py  metadata.py  utils.py
src/omniteleop/app/backend/mcap_utils/proto/: camera.proto  camera_pb2.py  compile_proto.sh  policy.proto  policy_pb2.py  robot.proto  robot_pb2.py
src/omniteleop/app/frontend/: index.html  launch.sh  package-lock.json  package.json  tailwind.config.js
src/omniteleop/app/frontend/src/: App.tsx  index.css  types.ts
src/omniteleop/common/: __init__.py  config.py  debug_display.py  filters.py  live_plotter.py  log_utils.py  logging.py  ruckig_trajectory.py  schemas.py  trajectory_interpolator.py
src/omniteleop/configs/: vega_1.yaml  vega_1_f5d6.yaml  vega_1_gripper.yaml  vega_1p.yaml  vega_1p_f5d6.yaml  vega_1p_gripper.yaml  vega_1u.yaml  vega_1u_f5d6.yaml  vega_1u_gripper.yaml
src/omniteleop/follower/: __init__.py  command_processor.py  robot_controller.py
src/omniteleop/follower/component_processors/: __init__.py  arm_processor.py  base_processor.py  chassis_processor.py  hand_processor.py  head_processor.py  safety_validator.py  torso_processor.py
src/omniteleop/follower/input_handlers/: __init__.py  base_handler.py  exo_joycon_handler.py
src/omniteleop/follower/input_handlers/control/: __init__.py  base_controller.py  commands.py  controller.py  end_effector.py  hand_controller.py  torso_controller.py
src/omniteleop/follower/input_handlers/utils/: __init__.py  button_manager.py
src/omniteleop/leader/: __init__.py  arm_reader.py  joycon_reader.py  utils.py
src/omniteleop/leader/communication/: avp_socket_client.py  base_socket_client.py  openxr_socket_client.py
src/omniteleop/leader/communication/proto/: controller.proto  quest_teleop_pb2.py
src/omniteleop/record/: mdp_recorder.py  replay_record.py
src/omniteleop/tools/: __init__.py  telemetry_simulator.py  telemetry_viewer.py
(+17 files in other folders)
